--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "express": "^4.16.4",
     "indian-stock-exchange": "^1.3.33",
     "loadash": "^1.0.0"
+  },
+  "engines": {
+    "node": "12.x"
   }
 }
